fix moreficient and note in dark mode

--- a/src/components/note/Note.module.css
+++ b/src/components/note/Note.module.css
@@ -13,7 +13,6 @@
     border-radius: 8px;
     overflow: hidden;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 3px 0px;
-    background: #fde9e7;
 }
 
 .content > p{
